# Humanoids-Motion-Generation

./: .gitattributes  README.md  build_features.py  bvh_parser.py  coding_question.md  config.yaml  motion_tracking.ipynb  pyproject.toml
GMR_scripts/: preprocessing.md  robot_motion_viewer.py
Lafan1_clipped/: walk1_subject1_seg1.bvh  walk1_subject1_seg2.bvh  walk1_subject2_seg1.bvh  walk1_subject5_seg1.bvh  walk2_subject1_seg1.bvh  walk2_subject1_seg2.bvh  walk2_subject3_seg1.bvh  walk2_subject3_seg2.bvh  walk2_subject3_seg3.bvh  walk2_subject4_seg1.bvh  walk2_subject4_seg2.bvh  walk3_subject1_seg1.bvh  walk3_subject1_seg2.bvh
Lafan1_clipped_label/: walk1_subject1_seg1.csv  walk1_subject1_seg2.csv  walk1_subject2_seg1.csv  walk1_subject5_seg1.csv  walk2_subject1_seg2.csv  walk2_subject3_seg1.csv  walk2_subject3_seg2.csv  walk2_subject3_seg3.csv  walk2_subject4_seg1.csv  walk2_subject4_seg2.csv  walk3_subject1_seg1.csv  walk3_subject1_seg2.csv
Lafan1_clipped_label_w3s1_w4s1/: walk3_subject1_seg1.csv  walk3_subject1_seg2.csv  walk3_subject1_seg3.csv  walk3_subject1_seg4.csv  walk3_subject1_seg5.csv  walk3_subject1_seg6.csv  walk3_subject2_seg1.csv  walk3_subject2_seg2.csv  walk3_subject3_seg1.csv  walk3_subject3_seg2.csv  walk3_subject4_seg1.csv  walk3_subject4_seg2.csv  walk3_subject4_seg3.csv  walk3_subject4_seg4.csv  walk3_subject4_seg5.csv  walk3_subject4_seg6.csv  walk3_subject4_seg7.csv  walk3_subject5.csv  walk4_subject1.csv
Lafan1_clipped_w3s1_w4s1/: walk3_subject1_seg1.bvh  walk3_subject1_seg2.bvh  walk3_subject1_seg3.bvh  walk3_subject1_seg4.bvh  (+14 more)
(+493 files in other folders)
