[project]
name = "humanoids-motion-generation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "attrs==25.4.0",
    "casadi==3.7.0",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "filelock==3.20.0",
    "fonttools==4.60.1",
    "fsspec==2025.10.0",
    "jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "pyarrow==21.0.0",
    "pygame==2.6.1",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "rerun-sdk==0.22.0",
    "scipy==1.15.2",
    "six==1.17.0",
    "sympy==1.14.0",
    "torch==2.9.1",
    "trimesh==4.8.3",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
]
