[project]
name = "humanoids-motion-generation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.10.7",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "pinocchio",
    "pygame==2.6.1",
    "pyyaml",
    "rerun-sdk==0.22.0",
    "scipy==1.15.2",
    "torch==2.9.1",
    "trimesh==4.8.3",
]
